# fast_api_app

./: .gitignore  pyproject.toml
fast_zero/: app.py
tests/: test_app.py
